add docker-compose file
