# docs/swagger.json
@@ -87,10 +87,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/handler.IngredientsInput"
                         }
                     }
                 ],
@@ -156,7 +153,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.FullRecipe"
+                            "$ref": "#/definitions/models.InputFullRecipe"
                         }
                     }
                 ],
@@ -267,6 +264,15 @@
                     "api/recipes"
                 ],
                 "summary": "getRecipeById",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID рецепта",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -324,6 +330,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "New data for recipe",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.InputFullRecipe"
+                        }
                     }
                 ],
                 "responses": {
@@ -556,7 +571,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/handler.signUpInput"
                         }
                     }
                 ],
@@ -596,6 +611,17 @@
         }
     },
     "definitions": {
+        "handler.IngredientsInput": {
+            "type": "object",
+            "required": [
+                "ingredients"
+            ],
+            "properties": {
+                "ingredients": {
+                    "type": "string"
+                }
+            }
+        },
         "handler.errorResponse": {
             "type": "object",
             "properties": {
@@ -605,6 +631,21 @@
             }
         },
         "handler.signInInput": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "handler.signUpInput": {
             "type": "object",
             "required": [
                 "password",
@@ -655,6 +696,54 @@
                 }
             }
         },
+        "models.InputFullRecipe": {
+            "type": "object",
+            "properties": {
+                "ingredients": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.InputIngredient"
+                    }
+                },
+                "recipe": {
+                    "$ref": "#/definitions/models.InputRecipe"
+                }
+            }
+        },
+        "models.InputIngredient": {
+            "type": "object",
+            "required": [
+                "name",
+                "quantity",
+                "unit_id"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "number"
+                },
+                "unit_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.InputRecipe": {
+            "type": "object",
+            "required": [
+                "instructions",
+                "name"
+            ],
+            "properties": {
+                "instructions": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Recipe": {
             "type": "object",
             "required": [
@@ -700,31 +789,10 @@
                     "type": "integer"
                 }
             }
-        },
-        "models.User": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "salt": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
         }
     },
     "securityDefinitions": {
-        "ApiKEyAuth": {
+        "BearerAuth": {
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
