# internal/handler/auth.go
@@ -8,26 +8,35 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+type signUpInput struct{
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
+}
+
 // @Summary SignUp
 // @Tags auth
 // @Description Create account
 // @Accept json
 // @Produce json
-// @Param input body models.User true "username and password"
+// @Param input body signUpInput true "username and password"
 // @Success 200 {integer} integer 1
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
 // @Router /auth/sign-up [post]
 func (h *Handler) signUp(c *gin.Context){
-	var input models.User
+	var input signUpInput
 
 	if err := c.BindJSON(&input); err != nil{
 		newErrorResponce(c, http.StatusBadRequest, "invalid input body")
 		return
 	}
 
-	id, err := h.services.Authorization.CreateUser(input)
+	var userInfo models.User
+	userInfo.Username = input.Username
+	userInfo.Password = input.Password
+
+	id, err := h.services.Authorization.CreateUser(userInfo)
 	if err != nil{
 		newErrorResponce(c, http.StatusConflict, err.Error())
 		return
