# internal/handler/recipes.go
@@ -15,7 +15,7 @@ import (
 // @Tags api/recipes
 // @Accept json
 // @Produce json
-// @Param input body models.FullRecipe true "json рецепта"
+// @Param input body models.InputFullRecipe true "json рецепта"
 // @Success 201 {object} string
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
@@ -105,6 +105,7 @@ func (h *Handler) SaveRecipeToProfile(c *gin.Context){
 // @Tags api/recipes
 // @Accept json
 // @Produce json
+// @Param id path int true "ID рецепта"
 // @Success 200 {object} models.FullRecipe `json:"data"`
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
@@ -164,6 +165,7 @@ func (h *Handler) getSavedRecipes(c *gin.Context){
 // @Accept json
 // @Produce json
 // @Param id path int true "ID рецепта"
+// @Param input body models.InputFullRecipe true "New data for recipe"
 // @Success 200 {object} string
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
@@ -228,36 +230,34 @@ func (h *Handler) deleteRecipe(c *gin.Context){
 	c.JSON(http.StatusOK, gin.H{"message": "recipe delete successful"})
 }
 
+type IngredientsInput struct {
+    Ingredients string `json:"ingredients" binding:"required"`
+}
+
 // @Summary getRecipeByIngredients
 // @Description getting recipe by ingredients
 // @Security BearerAuth
 // @Tags api/recipes
 // @Accept json
 // @Produce json
-// @Param input body map[string]string true "Список ингредиентов"
+// @Param input body IngredientsInput true "Список ингредиентов"
 // @Success 200 {array} models.SimplifiedRecipe `json:"data"`
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
 // @Router /api/recipes/by-ingredients [post]
-func (h *Handler) getRecipesByingredients(c *gin.Context){
-	var input map[string]string
-	if err := c.BindJSON(&input); err != nil{
-		newErrorResponce(c, http.StatusBadRequest, err.Error())
-		return
-	}
+func (h *Handler) getRecipesByIngredients(c *gin.Context) {
+    var input IngredientsInput
+    if err := c.BindJSON(&input); err != nil {
+        newErrorResponce(c, http.StatusBadRequest, err.Error())
+        return
+    }
 
-	ingredients, ok := input["ingredients"]
-	if !ok {
-		newErrorResponce(c, http.StatusBadRequest, "ingredient is required")
-		return
-	}
+    recipes, err := h.services.Recipe.GetRecipesByIngredients(input.Ingredients)
+    if err != nil {
+        newErrorResponce(c, http.StatusInternalServerError, err.Error())
+        return
+    }
 
-	recipes, err := h.services.Recipe.GetRecipesByIngredients(ingredients); 
-	if err != nil{
-		newErrorResponce(c, http.StatusInternalServerError, err.Error())
-		return
-	}
-
-	c.JSON(http.StatusOK, recipes)
+    c.JSON(http.StatusOK, recipes)
 }
